--- a/templates/parts/actor-spellbook.hbs
+++ b/templates/parts/actor-spellbook.hbs
@@ -39,6 +39,18 @@
     <li class="filter-item tag" data-filter="reaction">{{localize "DND5E.Reaction"}}</li>
     <li class="filter-item tag" data-filter="concentration">{{localize "DND5E.AbbreviationConc"}}</li>
     <li class="filter-item tag" data-filter="ritual">{{localize "DND5E.Ritual"}}</li>
+    <li class="filter-item tag" data-filter="Instantaneous">{{localize "DND5E.TimeInst"}}</li>
+    <li class="filter-item tag" data-filter="1 Rounds">1 {{localize "DND5E.TimeRound"}}</li>    
+    <li class="filter-item tag" data-filter="1 Minutes">1 {{localize "DND5E.TimeMinute"}}</li>
+    <li class="filter-item tag" data-filter="10 Minutes">10 {{localize "DND5E.TimeMinute"}}</li>
+    <li class="filter-item tag" data-filter="Abjuration">{{localize "DND5E.SchoolAbj"}}</li>
+    <li class="filter-item tag" data-filter="Conjuration">{{localize "DND5E.SchoolCon"}}</li>
+    <li class="filter-item tag" data-filter="Divination">{{localize "DND5E.SchoolDiv"}}</li>
+    <li class="filter-item tag" data-filter="Enchantment">{{localize "DND5E.SchoolEnc"}}</li>
+    <li class="filter-item tag" data-filter="Evocation">{{localize "DND5E.SchoolEvo"}}</li>
+    <li class="filter-item tag" data-filter="Illusion">{{localize "DND5E.SchoolIll"}}</li> 
+    <li class="filter-item tag" data-filter="Necromancy">{{localize "DND5E.SchoolNec"}}</li>
+    <li class="filter-item tag" data-filter="Transmutation">{{localize "DND5E.SchoolTrs"}}</li>       
     <li class="filter-item tag" data-filter="prepared">{{localize "DND5E.Prepared"}}{{#if preparedSpells}}
       ({{preparedSpells}}){{/if}}</li>
   </ul>
