--- a/templates/parts/actor-spellbook.hbs
+++ b/templates/parts/actor-spellbook.hbs
@@ -32,17 +32,25 @@
   </div>
 </div>
 
-<div class="inventory-filters spellbook-filters flexrow">
+<div class="inventory-filters spellbook-filters flexcol">
   <ul class="filter-list flexrow" data-filter="spellbook">
+    <li class="filter-set "><h4>{{localize "DND5E.SpellCastingHeader"}}:</h4></li>
     <li class="filter-item tag" data-filter="action">{{localize "DND5E.Action"}}</li>
     <li class="filter-item tag" data-filter="bonus">{{localize "DND5E.BonusAction"}}</li>
     <li class="filter-item tag" data-filter="reaction">{{localize "DND5E.Reaction"}}</li>
     <li class="filter-item tag" data-filter="concentration">{{localize "DND5E.AbbreviationConc"}}</li>
     <li class="filter-item tag" data-filter="ritual">{{localize "DND5E.Ritual"}}</li>
+    <li class="filter-item tag" data-filter="prepared">{{localize "DND5E.Prepared"}}{{#if preparedSpells}}({{preparedSpells}}){{/if}}</li>
+  </ul>
+  <ul class="filter-list flexrow" data-filter="spellbook">
+    <li class="filter-set "><h4>{{localize "DND5E.Duration"}}:</h4></li>
     <li class="filter-item tag" data-filter="Instantaneous">{{localize "DND5E.TimeInst"}}</li>
     <li class="filter-item tag" data-filter="1 Rounds">1 {{localize "DND5E.TimeRound"}}</li>    
     <li class="filter-item tag" data-filter="1 Minutes">1 {{localize "DND5E.TimeMinute"}}</li>
     <li class="filter-item tag" data-filter="10 Minutes">10 {{localize "DND5E.TimeMinute"}}</li>
+  </ul>
+  <ul class="filter-list flexrow" data-filter="spellbook">    
+    <li class="filter-set "><h4>{{localize "DND5E.SpellSchool"}}:</h4></li>
     <li class="filter-item tag" data-filter="Abjuration">{{localize "DND5E.SchoolAbj"}}</li>
     <li class="filter-item tag" data-filter="Conjuration">{{localize "DND5E.SchoolCon"}}</li>
     <li class="filter-item tag" data-filter="Divination">{{localize "DND5E.SchoolDiv"}}</li>
@@ -51,8 +59,6 @@
     <li class="filter-item tag" data-filter="Illusion">{{localize "DND5E.SchoolIll"}}</li> 
     <li class="filter-item tag" data-filter="Necromancy">{{localize "DND5E.SchoolNec"}}</li>
     <li class="filter-item tag" data-filter="Transmutation">{{localize "DND5E.SchoolTrs"}}</li>       
-    <li class="filter-item tag" data-filter="prepared">{{localize "DND5E.Prepared"}}{{#if preparedSpells}}
-      ({{preparedSpells}}){{/if}}</li>
   </ul>
 </div>
 
