--- a/templates/parts/actor-spellbook.hbs
+++ b/templates/parts/actor-spellbook.hbs
@@ -49,6 +49,19 @@
     <li class="filter-item tag" data-filter="1 Minutes">1 {{localize "DND5E.TimeMinute"}}</li>
     <li class="filter-item tag" data-filter="10 Minutes">10 {{localize "DND5E.TimeMinute"}}</li>
   </ul>
+    <ul class="filter-list flexrow" data-filter="spellbook">    
+    <li class="filter-set "><h4>{{localize "DND5E.Level"}}:</h4></li>
+    <li class="filter-item tag" data-filter="Cantrip">{{localize "DND5E.SpellLevel0"}}</li>
+    <li class="filter-item tag" data-filter="1st Level">{{localize "DND5E.SpellLevel1"}} {{spellbook.[1].slots}}/{{spellbook.[1].uses}}</li>
+    <li class="filter-item tag" data-filter="2nd Level">{{localize "DND5E.SpellLevel2"}}  {{spellbook.[2].slots}}/{{spellbook.[2].uses}}</li>
+    <li class="filter-item tag" data-filter="3rd Level">{{localize "DND5E.SpellLevel3"}}  {{spellbook.[3].slots}}/{{spellbook.[3].uses}}</li>
+    <li class="filter-item tag" data-filter="4th Level">{{localize "DND5E.SpellLevel4"}}  {{spellbook.[4].slots}}/{{spellbook.[4].uses}}</li>
+    <li class="filter-item tag" data-filter="5th Level">{{localize "DND5E.SpellLevel5"}} {{spellbook.[5].slots}}/{{spellbook.[5].uses}}</li> 
+    <li class="filter-item tag" data-filter="6th Level">{{localize "DND5E.SpellLevel6"}}  {{spellbook.[6].slots}}/{{spellbook.[6].uses}}</li>
+    <li class="filter-item tag" data-filter="7th Level">{{localize "DND5E.SpellLevel7"}} {{spellbook.[7].slots}}/{{spellbook.[7].uses}}</li>       
+    <li class="filter-item tag" data-filter="8th Level">{{localize "DND5E.SpellLevel8"}} {{spellbook.[8].slots}}/{{spellbook.[8].uses}}</li>
+    <li class="filter-item tag" data-filter="9th Level">{{localize "DND5E.SpellLevel9"}} {{spellbook.[9].slots}}/{{spellbook.[9].uses}}</li>       
+  </ul>
   <ul class="filter-list flexrow" data-filter="spellbook">    
     <li class="filter-set "><h4>{{localize "DND5E.SpellSchool"}}:</h4></li>
     <li class="filter-item tag" data-filter="Abjuration">{{localize "DND5E.SchoolAbj"}}</li>
