--- a/templates/parts/sheet-header.hbs
+++ b/templates/parts/sheet-header.hbs
@@ -29,7 +29,7 @@
     <li class="experience-input">
       <input name="data.details.xp.value" type="text" value="{{data.details.xp.value}}" data-dtype="Number"
         placeholder="0" />
-      <small><label>{{ localize 'DND5E.Experience' }}</label></small>
+      <small><label>{{ localize 'SPELL_BETTER.Experience' }}</label></small>
     </li>
     {{/unless}}
   </ul>
