--- a/templates/parts/actor-health-armor.hbs
+++ b/templates/parts/actor-health-armor.hbs
@@ -3,7 +3,7 @@
   <ul class="ac-initiative-speed flexrow">
     <li class="ac">
       <div class="ac-symbol">
-        {{> (ogl5e-sheet-path "assets/armor-class.hbs")}}
+        {{> (spell-better-sheet-path "assets/armor-class.hbs")}}
       </div>
       <h4>Armor</h4>
       <div class="attribute-value">
